--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@types/multer-s3": "^3.0.0",
     "@types/node": "^20.5.7",
     "@types/nodemailer": "^6.4.9",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
@@ -40,6 +44,8 @@
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.4",
     "socket.io": "^4.7.2",
+    "swagger": "^0.7.5",
+    "swagger-express": "^1.0.5",
     "uuidv4": "^6.2.13"
   },
   "engines": {
