--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,7 @@
     "strict": true,
     "noImplicitAny": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
